# DoDroidAI

./: AGENTS.md  CLAUDE.md  README.md  README_zh.md  TodoTasks.md  build.gradle.kts  settings.gradle.kts
.claude/: settings.json
.github/workflows/: app-build-release.yml  app-build-test.yml  app-build.yml  app2.yml  appbuild.yml  appbuild111.yml  appbuild3124134.yml  appbuildfjhfjh.yml  release---.yml  release-build.yml  release-test.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/jni/whisper/: CMakeLists.txt  jni.c
app/src/main/res/anim/: slide_in_left.xml  slide_out_left.xml
app/src/main/res/drawable/: bg_attachment_item.xml  bg_button_think.xml  bg_chat_session.xml  bg_circle_button.xml  bg_delete.xml  bg_input_container.xml  bg_reasoning_card.xml  bg_send_button.xml  bg_tool_call_item.xml  divider_horizontal.xml  divider_vertical.xml  ic_arrow_right.xml  ic_avatar_ai.xml  ic_avatar_user.xml  ic_camera.xml  ic_copy.xml  ic_file.xml  ic_info.xml  ic_keyboard.xml  ic_menu.xml  ic_mic.xml  ic_photo.xml  ic_send.xml  ic_settings.xml  ic_shortcut_web.xml  ic_think.xml  ic_web_search.xml  widget_background.xml  widget_search_background.xml
app/src/main/res/layout/: activity_main.xml  dialog_custom.xml  dialog_theme_setting.xml  dialog_voice_input.xml  fragment_about.xml  fragment_ai_config.xml  fragment_ai_config_list.xml  fragment_chat.xml  fragment_chat_list.xml  fragment_language_setting.xml  fragment_settings.xml  item_ai_config.xml  item_attachment.xml  item_chat_section_header.xml  item_chat_session.xml  item_dialog_button.xml  item_dialog_option.xml  item_message_assistant.xml  item_message_user.xml  item_tool_call.xml  layout_toolbar.xml  view_chat_add_options.xml  view_chat_input_box.xml  view_settings_item.xml  widget_agent_1x2.xml  widget_agent_1x4.xml  widget_agent_2x2.xml
app/src/main/res/menu/: menu_ai_config_item.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v29/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
gradle/: libs.versions.toml
keystore/: release.keystore
plan/: 11-flickering-gadget.md  5-web-search-enumerated-kay.md  _high_risk_tool_confirmation.md  _tool_interface_refactor.md  _voice_input_tts.md  ai-ai-lexical-ullman.md  ai-review-whimsical-hollerith.md  app-shortcut-webfragment-webfragent-web-wiggly-lerdorf.md  chat-list-grouping.md  delegated-plotting-knuth.md  goofy-napping-creek.md  inherited-purring-sunbeam.md
src/: whisper.cpp
webview-sdk/: build.gradle.kts
(+91 files in other folders)
