cmake_minimum_required(VERSION 3.10)

project(whisper.cpp)

set(CMAKE_CXX_STANDARD 17)

# CMAKE_SOURCE_DIR = app/src/main/jni/whisper
set(PROJECT_ROOT ${CMAKE_SOURCE_DIR}/../../../../..)
set(WHISPER_SRC_DIR ${PROJECT_ROOT}/src)
set(GGML_ROOT "${CMAKE_SOURCE_DIR}/../ggml")

set(WHISPER_VERSION "1.6.0")
message(STATUS "Whisper version: ${WHISPER_VERSION}")

find_library(LOG_LIB log)

include(FetchContent)

function(build_library target_name)
    add_library(
        ${target_name}
        SHARED
        ${WHISPER_SRC_DIR}/whisper.cpp
        ${CMAKE_SOURCE_DIR}/jni.c
    )

    target_compile_definitions(${target_name} PUBLIC GGML_USE_CPU)
    target_compile_definitions(${target_name} PRIVATE WHISPER_VERSION="${WHISPER_VERSION}")

    if (${target_name} STREQUAL "whisper_v8fp16_va")
        target_compile_options(${target_name} PRIVATE -march=armv8.2-a+fp16)
        set(GGML_COMPILE_OPTIONS -march=armv8.2-a+fp16)
    elseif (${target_name} STREQUAL "whisper_vfpv4")
        target_compile_options(${target_name} PRIVATE -mfpu=neon-vfpv4)
        set(GGML_COMPILE_OPTIONS -mfpu=neon-vfpv4)
    endif ()

    if (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
        target_compile_options(${target_name} PRIVATE -Ofast)
        target_compile_options(${target_name} PRIVATE -ffast-math)
        target_compile_options(${target_name} PRIVATE -funroll-loops)
        target_compile_options(${target_name} PRIVATE -fvisibility=hidden -fvisibility-inlines-hidden)
        target_compile_options(${target_name} PRIVATE -ffunction-sections -fdata-sections)

        target_link_options(${target_name} PRIVATE -Wl,--gc-sections)
        target_link_options(${target_name} PRIVATE -Wl,--exclude-libs,ALL)
        target_link_options(${target_name} PRIVATE -flto)
    endif ()

    FetchContent_Declare(ggml SOURCE_DIR ${GGML_ROOT})
    FetchContent_MakeAvailable(ggml)
    target_compile_options(ggml PRIVATE ${GGML_COMPILE_OPTIONS})
    target_link_libraries(${target_name} ${LOG_LIB} android ggml)
endfunction()

if (${ANDROID_ABI} STREQUAL "arm64-v8a")
    build_library("whisper_v8fp16_va")
elseif (${ANDROID_ABI} STREQUAL "armeabi-v7a")
    build_library("whisper_vfpv4")
endif ()

build_library("whisper")

include_directories(${WHISPER_SRC_DIR})
include_directories(${PROJECT_ROOT}/include)
include_directories(${GGML_ROOT}/include)
include_directories(${GGML_ROOT}/src)
include_directories(${GGML_ROOT}/src/ggml-cpu)